--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@
 # This is a basic workflow to help you get started with Actions
 name: CI-CD
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
@@ -52,28 +56,34 @@ jobs:
 
         - name: Set up QEMU
           uses: docker/setup-qemu-action@v1
-      
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
 
-        - name: Login to DockerHub
-          uses: docker/login-action@v1
+        - name: Authenticate with container registry
+          uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
           with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+            registry: ${{ env.REGISTRY }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+
+        - name: Extract metadata for Docker
+          id: meta
+          uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+          with:
+            images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
         - name: Build and push
           uses: docker/build-push-action@v2
           with:
             context: ./
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
-          
+            tags: ${{ steps.meta.outputs.labels }}
+
         - name: Run the image in a container
           uses: addnab/docker-run-action@v3
           with:
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
+            image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             run: |
               echo "runing the docker image"
               echo "Testing the nodejs  app endpoints"
