--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,7 @@ jobs:
             images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
         - name: Build and push
+          id: build
           uses: docker/build-push-action@v2
           with:
             context: ./
@@ -85,6 +86,6 @@ jobs:
           with:
             image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             run: |
-              echo "runing the docker image"
-              echo "Testing the nodejs  app endpoints"
-              echo ${{ steps.docker_build.outputs.digest }}
+              echo "Running the docker image"
+              echo "Testing the nodejs app endpoints"
+              echo "${{ steps.build.outputs.digest }}"
