--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,6 @@ jobs:
           uses: docker/build-push-action@v2
           with:
             context: ./
-            file: ./Dockerfile
+            file: ./Containerfile
             push: true
             tags: ${{ env.REGISTRY}}/${{ env.IMAGE_NAME }}
